--- a/sample_config.ini
+++ b/sample_config.ini
@@ -4,7 +4,7 @@ APP_ID = https://my.telegram.org
 API_HASH = https://my.telegram.org
 TOKEN = https://t.me/BotFather
 OWNER_ID = 895373440
-OWNER_USERNAME = dank_as_fuck
+OWNER_USERNAME = cyber_doom
 SQLALCHEMY_DATABASE_URI = postgres db url
 MESSAGE_DUMP = -1001451724150
 GBAN_LOGS = -1001451724150
